fixed some internal issues

--- a/ui/src/components/Project.css
+++ b/ui/src/components/Project.css
@@ -1,14 +1,19 @@
-.hw{
-    padding: 8px 0px;
+.Project {
+    background-color: lightgrey;
+    margin: 20px;
+    width: 1000px;
+    height: 120px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    gap: 0.5rem;
+    text-align: left;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 50px;
+    justify-content: space-evenly;
 }
 
-.project-join {
-    margin-top: 50px !important;
-    height: 30px;
-    width: 50px;
-    justify-items: center;
+#decide {
+    width: 70px;
+    height: 40px;
+    float: left;
+    background-color: wheat;
 }
