fixed some errors and created better designed front end

--- a/ui/src/Components/Projects.css
+++ b/ui/src/Components/Projects.css
@@ -1,4 +1,21 @@
-.Projects {
-    margin: 28px;
-    text-align: left;
+.head{
+    font-size: xx-large;
+    font-weight: bolder;
+    text-align: center;
+    margin-top: 0px;
+}
+
+.outline {
+    text-align: center;
+    font-size: large;
+    font-style: oblique;
+    color: black;
+}
+
+.project {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 1rem;
 }
